클래스 이름 정리

--- a/index-hidden.html
+++ b/index-hidden.html
@@ -80,7 +80,7 @@
                 <span class="title">Overall Rating</span>
               </div>
               <div class="content">
-                <span class="tag-green content-summary-rating">4.8</span>
+                <span class="color-tag-green content-summary-rating">4.8</span>
               </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 block-summary">
@@ -150,10 +150,10 @@
           <div class="section-divider">
             <h5>Language</h5>
             <div class="block-tag">
-              <span class="tag-small tag-greenish">PHP</span>
-              <span class="tag-small tag-purple">C</span>
-              <span class="tag-small tag-yellow">SQL</span>
-              <span class="tag-small tag-greenish">C#</span>
+              <span class="tag-small color-tag-greenish">PHP</span>
+              <span class="tag-small color-tag-purple">C</span>
+              <span class="tag-small color-tag-yellow">SQL</span>
+              <span class="tag-small color-tag-greenish">C#</span>
             </div>
           </div>
           <div class="section-divider clearfix">
@@ -199,10 +199,10 @@
           <div class="section-divider">
             <h5>Language</h5>
             <div class="block-tag">
-              <span class="tag-small tag-greenish">PHP</span>
-              <span class="tag-small tag-purple">C</span>
-              <span class="tag-small tag-yellow">SQL</span>
-              <span class="tag-small tag-greenish">C#</span>
+              <span class="tag-small color-tag-greenish">PHP</span>
+              <span class="tag-small color-tag-purple">C</span>
+              <span class="tag-small color-tag-yellow">SQL</span>
+              <span class="tag-small color-tag-greenish">C#</span>
             </div>
           </div>
           <div class="section-divider clearfix">
@@ -248,10 +248,10 @@
           <div class="section-divider">
             <h5>Language</h5>
             <div class="block-tag">
-              <span class="tag-small tag-greenish">PHP</span>
-              <span class="tag-small tag-purple">C</span>
-              <span class="tag-small tag-yellow">SQL</span>
-              <span class="tag-small tag-greenish">C#</span>
+              <span class="tag-small color-tag-greenish">PHP</span>
+              <span class="tag-small color-tag-purple">C</span>
+              <span class="tag-small color-tag-yellow">SQL</span>
+              <span class="tag-small color-tag-greenish">C#</span>
             </div>
           </div>
           <div class="section-divider clearfix">
@@ -297,10 +297,11 @@
           <div class="section-divider">
             <h5>Language</h5>
             <div class="block-tag">
-              <span class="tag-small tag-greenish">PHP</span>
-              <span class="tag-small tag-purple">C</span>
-              <span class="tag-small tag-yellow">SQL</span>
-              <span class="tag-small tag-greenish">C#</span>
+              <span class="tag-small color-tag-greenish">PHP</span>
+              <span class="tag-small color-tag-purple">C</span>
+              <span class="tag-small color-tag-yellow">SQL</span>
+              <span class="tag-small color-tag-greenish">C#</span>
+              <span class="tag-small color-tag-gray">5+</span>
             </div>
           </div>
           <div class="section-divider clearfix">
