태그 업데이트

--- a/index-hidden.html
+++ b/index-hidden.html
@@ -126,7 +126,7 @@
           <div class="section-title clearfix section-divider">
             <span class="icon ic-github"></span>
             <span class="title">Redwood</span>
-            <span class="rating-md tag-green">
+            <span class="rating-md color-tag-green">
               4.8
             </span>
             <span class="version">LAST SCANNED: 0.2.0.1</span>
@@ -175,7 +175,7 @@
           <div class="section-title clearfix section-divider">
             <span class="icon ic-github"></span>
             <span class="title">Sonar</span>
-            <span class="rating-md tag-green">
+            <span class="rating-md color-tag-green">
               4.8
             </span>
             <span class="version">LAST SCANNED: 0.2.0.1</span>
